--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,11 @@
     "vitest": "^1.2.2"
   },
   "dependencies": {
+    "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/formbody": "^7.4.0",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "pino": "^8.19.0",
