--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,8 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/type-provider-typebox": "^4.0.0",
+    "@sinclair/typebox": "^0.32.15",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "pino": "^8.19.0",
