--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,27 +11,34 @@
   "author": "StickerApp",
   "license": "ISC",
   "devDependencies": {
+	"@stickerapp-org/eslint-config": "*",
+    "@stickerapp-org/prettier-config": "*",
     "@types/node": "^20.11.25",
     "@types/pino": "^7.0.5",
+	"@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "pino-pretty": "^10.3.1",
+	"prettier": "^3.1.1",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vitest": "^1.2.2"
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "dependencies": {
     "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/formbody": "^7.4.0",
+	"@fastify/sensible": "^5.0.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@fastify/type-provider-typebox": "^4.0.0",
-    "@sinclair/typebox": "^0.32.15",
+    "@sinclair/typebox": "^0.32.13",
+	"@stickerapp-org/emporio-api-contract": "*",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
-    "pino": "^8.19.0",
+	"fastify-plugin": "^4.0.0",
     "tsconfig-paths": "^4.2.0"
   }
 }
