--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emporio-api",
+  "name": "@stickerapp-org/emporio-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
