--- a/packages/nomisma/package.json
+++ b/packages/nomisma/package.json
@@ -35,7 +35,7 @@
     "@stickerapp-org/eslint-config": "*",
     "@stickerapp-org/prettier-config": "*",
     "@stickerapp-org/tailwind-config": "*",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
