--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "@fastify/type-provider-typebox": "^4.0.0",
     "@sinclair/typebox": "^0.32.13",
 	"@stickerapp-org/emporio-api-contract": "*",
+	"@stickerapp-org/nomisma": "*",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
 	"fastify-plugin": "^4.0.0",
