--- a/packages/nomisma/tsconfig.json
+++ b/packages/nomisma/tsconfig.json
@@ -1,15 +1,13 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "module": "esnext",
-    "moduleResolution": "bundler"
-  }
+	"extends": "../../tsconfig.base.json",
+	"compilerOptions": {
+		"outDir": "dist/cjs",
+		"baseUrl": "./src",
+		"sourceMap": true,
+		"moduleResolution": "Node",
+		"declaration": true,
+		"strict": true,
+		"module": "CommonJS",
+		"target": "ES6",
+	}	
 }
