--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - '5012:5012'
     environment:
       LOG_LEVEL: ${LOG_LEVEL}
-      API_PORT: ${API_PORT}
-      API_HOST: ${API_HOST}
+    #   API_PORT: ${API_PORT}
+    #   API_HOST: ${API_HOST}
     networks:
       - atlas
 networks:
