--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     #   API_HOST: ${API_HOST}
     networks:
       - atlas
+    volumes:
+      - /var/log/emporio:/var/log/emporio
 networks:
   atlas:
     name: stickerapp_atlas
