Make atlas api url configurable for emporio

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,4 @@ LOG_LEVEL=info
 API_PORT=5012
 API_HOST=0.0.0.0
 
-# UI
-# API_URL=http://emporio-api:5012/
+ATLAS_API_URL=https://api.testing.stickerapp.com
