--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       LOG_LEVEL: ${LOG_LEVEL}
       API_PORT: ${API_PORT}
-      API_HOST: ${API_HOST}
+      ATLAS_API_URL: ${ATLAS_API_URL}
     networks:
       - atlas
     volumes:
