--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sinclair/typebox": "0.32.13",
 		"@stickerapp-org/eslint-config": "*",
+		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^20.11.1",
 		"cross-env": "^7.0.3",
 		"pino-pretty": "^10.3.1",
@@ -39,6 +40,7 @@
 	],
 	"dependencies": {
 		"dotenv": "^16.3.1",
+		"js-yaml": "^4.1.0",
 		"pino": "^8.19.0"
 	}
 }
