--- a/apps/api/src/configuration/families/sticker-custom.yaml
+++ b/apps/api/src/configuration/families/sticker-custom.yaml
@@ -1,73 +1,72 @@
 name: sticker-custom
 products:
-  - sticker-bumper
+  - die_cut
+  - single_on_sheet
+  - sheet
+  - sheet_kiss_cut
+  - sheet_legacy
+  - hang_tag
+  - 3d_dome
+  - front_adhesive
+  - heavy_duty
+  - removable
+  - wall
+  - floor
+  - laptop_skin
+  - double_sided
+  - labels_on_sheet
+  - labels_on_roll
+  - library_design
+  - transfer_decal
+  - window
 rules:
   attributes:
     required:
-      - type
+      - sheet_type
+      - sheet_name
       - material
       - laminate
       - width_mm
       - height_mm
-  production:
-    web:
-      - direction
-    delivery:
-      - type
-      - padding_mm
-      - padding_outside_mm
-      - width_mm
-      - height_mm
-settings:
-  general:
-    pricing_model: default
-    cutline:
-      - contour
-      - square
-      - circle
-      - rounded
-    material:
-      - white
-      - clear
-      - holographic
-      - mirror
-      - brushed_metal
-    laminate:
-      - glossy_uv
-      - glossy_no_uv
-      - matte
-      - uncoated
-  wizard:
-    size:
-      - 3x1
-      - 4x2
-      - 5x3
-      - 6x4
-      - custom
-    quantity:
-      - 1
-      - 5
-      - 10
-      - 25
-      - 50
-      - 100
-      - 250
-      - custom
-  editor:
-    tools:
-      - upload
-      - cutline
-      - material
-      - laminate
-      - effect
-      - text
-      - background
-      - clipart
-      - note
-      - size (width + height)
       - quantity
-      - summary
-      - backpaper
+    optional:
+      - price_margin_percentage
+      - changed
+      - figure_id
+      - reorder_id
+      - note
+      - sheet_type_save_as
+      - template_id
+      - size
+      - imperial_units
+      - feature
+      - production_line
+      - production_instruction
+      - delivery
+      - delivery_sheet_width
+      - delivery_sheet_height
+      - delivery_sheet_inside_padding
+      - delivery_sheet_outside_padding
+      - epoxy_template_id
+      - innercut_as_kisscut
+      - white_layer
+      - cut_direction
+      - image_filters
+      - outline
+      - ink
+      - reseller
+      - max_size_mm
+      - max_size_other_side_mm
+      - min_size_mm
+      - fixed_size
+      - fixed_quantity
+      - material_color
+      - color_supported
+      - market
+      - delivery_roll_size_type
+      - delivery_roll_size_mm
+      - delivery_roll_top_edge_margin
+      - delivery_roll_item_margin
   template: |
     {{name}}
     {{material}} / {{laminate}}
