Delete unimplemented families

--- a/apps/api/src/configuration/services/stickerapp.yaml
+++ b/apps/api/src/configuration/services/stickerapp.yaml
@@ -1,12 +1,12 @@
 name: stickerapp
 pricing_models:
   - default
-  - promo
-  - fee
+#   - promo
+#   - fee
 families:
   - sticker-custom
-  - promo
-  - fee
+#   - promo
+#   - fee
 attributes:
   - sheet_type
   - sheet_name
