Update constraint configs to have builder base

--- a/apps/api/src/configuration/constraints/ColorSupportedConstraint.yaml
+++ b/apps/api/src/configuration/constraints/ColorSupportedConstraint.yaml
@@ -3,7 +3,9 @@ rules:
   - keys:
       - true
     conditions:
-      - attribute: material
-        operator: IN
-        value:
-          - "{MaterialValues.COLORED_VINYL}"
+      relationMode: AND
+      conditions:
+        - attribute: material
+          operator: IN
+          value:
+            - "{MaterialValues.COLORED_VINYL}"
