--- a/apps/api/src/configuration/constraints/FeatureConstraint.yaml
+++ b/apps/api/src/configuration/constraints/FeatureConstraint.yaml
@@ -11,24 +11,28 @@ rules:
   - keys:
       - BACKPAPER_PRINT
     conditions:
-      - relationMode: OR
-        conditions:
-          - attribute: material
-            operator: IN
-            value:
-              - "{LaserMaterials}"
+      relationMode: OR
+      conditions:
+        - attribute: material
+          operator: IN
+          value:
+            - "{LaserMaterials}"
 
   - keys:
       - EFFECT_LAYER
     conditions:
-      - attribute: material
-        operator: IN
-        value:
-          - "{FeatureConstraint.EFFECT_LAYER_MATERIALS}"
+      relationMode: AND
+      conditions:
+        - attribute: material
+          operator: IN
+          value:
+            - "{FeatureConstraint.EFFECT_LAYER_MATERIALS}"
 
   - keys:
       - TRANSFER_TAPE
     conditions:
-      - attribute: production_line
-        operator: EQUAL
-        value: "{ProductionLines.DIGITAL}"
+      relationMode: AND
+      conditions:
+        - attribute: production_line
+          operator: EQUAL
+          value: "{ProductionLines.DIGITAL}"
