Fix constraint Yaml makeup

--- a/apps/api/src/configuration/constraints/CutDirectionConstraint.yaml
+++ b/apps/api/src/configuration/constraints/CutDirectionConstraint.yaml
@@ -8,7 +8,7 @@ rules:
         - attribute: productName
           operator: NOT_IN
           value:
-            - "{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}"
+            - '{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}'
 
   - keys:
       - TOP_FIRST
@@ -18,11 +18,11 @@ rules:
       conditions:
         - attribute: width_mm
           operator: LESS_THAN_OR_EQUAL
-          value: "{MaxSizeOtherSideValues.ROLL}"
+          value: '{MaxSizeOtherSideValues.ROLL}'
         - attribute: productName
           operator: NOT_IN
           value:
-            - "{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}"
+            - '{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}'
 
   - keys:
       - LEFT_FIRST
@@ -32,8 +32,8 @@ rules:
       conditions:
         - attribute: height_mm
           operator: LESS_THAN_OR_EQUAL
-          value: "{MaxSizeOtherSideValues.ROLL}"
+          value: '{MaxSizeOtherSideValues.ROLL}'
         - attribute: productName
           operator: NOT_IN
           value:
-            - "{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}"
+            - '{CustomStickerFamily.PRODUCT_LABELS_ON_ROLL}'
