Fix errors when reading yaml files

--- a/apps/api/src/configuration/filters/FeatureFilter.yaml
+++ b/apps/api/src/configuration/filters/FeatureFilter.yaml
@@ -7,7 +7,7 @@ rules:
       - pack_set_amount
       - perforation
       - variable_data
-    conditions:
+    conditions: []
     
   - keys:
     - backpaper_print
